I Added new requirements to the project

--- a/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
+++ b/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
@@ -119,6 +119,12 @@
     <Compile Include="ctrlPersonInformationFindBy.Designer.cs">
       <DependentUpon>ctrlPersonInformationFindBy.cs</DependentUpon>
     </Compile>
+    <Compile Include="Detain License.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Detain License.Designer.cs">
+      <DependentUpon>Detain License.cs</DependentUpon>
+    </Compile>
     <Compile Include="InternationalDriverInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -324,6 +330,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ctrlUserInformation.resx">
       <DependentUpon>ctrlUserInformation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Detain License.resx">
+      <DependentUpon>Detain License.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InternationalDriverInfo.resx">
       <DependentUpon>InternationalDriverInfo.cs</DependentUpon>
