--- a/DVLD_winForm/DVLD_BussinessLayer/DVLD_BussinessLayer.csproj
+++ b/DVLD_winForm/DVLD_BussinessLayer/DVLD_BussinessLayer.csproj
@@ -47,6 +47,7 @@
     <Compile Include="clsGlobalSettings.cs" />
     <Compile Include="Countries.cs" />
     <Compile Include="ApplicationTypes.cs" />
+    <Compile Include="DetainedLicenses.cs" />
     <Compile Include="Drivers.cs" />
     <Compile Include="InternationalLicences.cs" />
     <Compile Include="LicenseClassBuss.cs" />
