--- a/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
+++ b/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
@@ -107,17 +107,17 @@
     <Compile Include="ctrlL_D_L_ApplicationInfo.Designer.cs">
       <DependentUpon>ctrlL_D_L_ApplicationInfo.cs</DependentUpon>
     </Compile>
-    <Compile Include="ctrlPersonInformation.cs">
+    <Compile Include="People\Controls\ctrlPersonCard.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ctrlPersonInformation.Designer.cs">
-      <DependentUpon>ctrlPersonInformation.cs</DependentUpon>
+    <Compile Include="People\Controls\ctrlPersonCard.Designer.cs">
+      <DependentUpon>ctrlPersonCard.cs</DependentUpon>
     </Compile>
-    <Compile Include="ctrlPersonInformationFindBy.cs">
+    <Compile Include="People\Controls\ctrlPersonCardWithFilter.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ctrlPersonInformationFindBy.Designer.cs">
-      <DependentUpon>ctrlPersonInformationFindBy.cs</DependentUpon>
+    <Compile Include="People\Controls\ctrlPersonCardWithFilter.Designer.cs">
+      <DependentUpon>ctrlPersonCardWithFilter.cs</DependentUpon>
     </Compile>
     <Compile Include="Detain License.cs">
       <SubType>Form</SubType>
@@ -338,11 +338,11 @@
     <EmbeddedResource Include="ctrlL_D_L_ApplicationInfo.resx">
       <DependentUpon>ctrlL_D_L_ApplicationInfo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ctrlPersonInformation.resx">
-      <DependentUpon>ctrlPersonInformation.cs</DependentUpon>
+    <EmbeddedResource Include="People\Controls\ctrlPersonCard.resx">
+      <DependentUpon>ctrlPersonCard.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ctrlPersonInformationFindBy.resx">
-      <DependentUpon>ctrlPersonInformationFindBy.cs</DependentUpon>
+    <EmbeddedResource Include="People\Controls\ctrlPersonCardWithFilter.resx">
+      <DependentUpon>ctrlPersonCardWithFilter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ctrlUserInformation.resx">
       <DependentUpon>ctrlUserInformation.cs</DependentUpon>
@@ -495,6 +495,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Male 512.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Woman 32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Man 32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
