--- a/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
+++ b/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
@@ -213,17 +213,17 @@
     <Compile Include="ListLocalDrivingLicenseApplication.Designer.cs">
       <DependentUpon>ListLocalDrivingLicenseApplication.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoginScreen.cs">
+    <Compile Include="Login\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoginScreen.Designer.cs">
-      <DependentUpon>LoginScreen.cs</DependentUpon>
+    <Compile Include="Login\frmLogin.Designer.cs">
+      <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Main.cs">
+    <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main.Designer.cs">
-      <DependentUpon>Main.cs</DependentUpon>
+    <Compile Include="frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Manage Application Types.cs">
       <SubType>Form</SubType>
@@ -231,11 +231,11 @@
     <Compile Include="Manage Application Types.Designer.cs">
       <DependentUpon>Manage Application Types.cs</DependentUpon>
     </Compile>
-    <Compile Include="Manage Users.cs">
+    <Compile Include="Users\frmListUsers.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Manage Users.Designer.cs">
-      <DependentUpon>Manage Users.cs</DependentUpon>
+    <Compile Include="Users\frmListUsers.Designer.cs">
+      <DependentUpon>frmListUsers.cs</DependentUpon>
     </Compile>
     <Compile Include="People\frmListPeople.cs">
       <SubType>Form</SubType>
@@ -377,17 +377,17 @@
     <EmbeddedResource Include="ListLocalDrivingLicenseApplication.resx">
       <DependentUpon>ListLocalDrivingLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoginScreen.resx">
-      <DependentUpon>LoginScreen.cs</DependentUpon>
+    <EmbeddedResource Include="Login\frmLogin.resx">
+      <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Main.resx">
-      <DependentUpon>Main.cs</DependentUpon>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manage Application Types.resx">
       <DependentUpon>Manage Application Types.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Manage Users.resx">
-      <DependentUpon>Manage Users.cs</DependentUpon>
+    <EmbeddedResource Include="Users\frmListUsers.resx">
+      <DependentUpon>frmListUsers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="People\frmFindPerson.resx">
       <DependentUpon>frmFindPerson.cs</DependentUpon>
