--- a/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
+++ b/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
@@ -53,6 +53,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Applications\Controls\ctrlApplicationBasicInfo.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Applications\Controls\ctrlApplicationBasicInfo.Designer.cs">
+      <DependentUpon>ctrlApplicationBasicInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Applications\LocalDrivingLicense\frmLocalDrivingApplicationInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Applications\LocalDrivingLicense\frmLocalDrivingApplicationInfo.Designer.cs">
+      <DependentUpon>frmLocalDrivingApplicationInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="People\frmAddEditPersoneInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,12 +76,6 @@
     </Compile>
     <Compile Include="Users\frmAddEditUser.Designer.cs">
       <DependentUpon>frmAddEditUser.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ApplicationInfoScreen.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ApplicationInfoScreen.Designer.cs">
-      <DependentUpon>ApplicationInfoScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="AppointementsVisionTest.cs">
       <SubType>Form</SubType>
@@ -101,11 +107,11 @@
     <Compile Include="ctrlLicenseInfo.Designer.cs">
       <DependentUpon>ctrlLicenseInfo.cs</DependentUpon>
     </Compile>
-    <Compile Include="ctrlL_D_L_ApplicationInfo.cs">
+    <Compile Include="Applications\LocalDrivingLicense\Controls\ctrlLocalDrivingLicenseApplicationInfo.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ctrlL_D_L_ApplicationInfo.Designer.cs">
-      <DependentUpon>ctrlL_D_L_ApplicationInfo.cs</DependentUpon>
+    <Compile Include="Applications\LocalDrivingLicense\Controls\ctrlLocalDrivingLicenseApplicationInfo.Designer.cs">
+      <DependentUpon>ctrlLocalDrivingLicenseApplicationInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="People\Controls\ctrlPersonCard.cs">
       <SubType>UserControl</SubType>
@@ -207,11 +213,11 @@
     <Compile Include="Users\Controls\ctrlUserCard.Designer.cs">
       <DependentUpon>ctrlUserCard.cs</DependentUpon>
     </Compile>
-    <Compile Include="ListLocalDrivingLicenseApplication.cs">
+    <Compile Include="Applications\LocalDrivingLicense\frmListLocalDrivingLicenseApplication.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ListLocalDrivingLicenseApplication.Designer.cs">
-      <DependentUpon>ListLocalDrivingLicenseApplication.cs</DependentUpon>
+    <Compile Include="Applications\LocalDrivingLicense\frmListLocalDrivingLicenseApplication.Designer.cs">
+      <DependentUpon>frmListLocalDrivingLicenseApplication.cs</DependentUpon>
     </Compile>
     <Compile Include="Login\frmLogin.cs">
       <SubType>Form</SubType>
@@ -249,11 +255,11 @@
     <Compile Include="Tests\TestTypes\frmListTestTypes.Designer.cs">
       <DependentUpon>frmListTestTypes.cs</DependentUpon>
     </Compile>
-    <Compile Include="Applications\LocalDrivingLicenseApplication\frmNewLocalDrivingLicenseApplication.cs">
+    <Compile Include="Applications\LocalDrivingLicense\frmAddEditLocalDrivingLicenseApplication.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Applications\LocalDrivingLicenseApplication\frmNewLocalDrivingLicenseApplication.Designer.cs">
-      <DependentUpon>frmNewLocalDrivingLicenseApplication.cs</DependentUpon>
+    <Compile Include="Applications\LocalDrivingLicense\frmAddEditLocalDrivingLicenseApplication.Designer.cs">
+      <DependentUpon>frmAddEditLocalDrivingLicenseApplication.cs</DependentUpon>
     </Compile>
     <Compile Include="People\frmShowPersonInfo.cs">
       <SubType>Form</SubType>
@@ -317,14 +323,17 @@
     <Compile Include="Written test appointment.Designer.cs">
       <DependentUpon>Written test appointment.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Applications\Controls\ctrlApplicationBasicInfo.resx">
+      <DependentUpon>ctrlApplicationBasicInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Applications\LocalDrivingLicense\frmLocalDrivingApplicationInfo.resx">
+      <DependentUpon>frmLocalDrivingApplicationInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="People\frmAddEditPersoneInfo.resx">
       <DependentUpon>frmAddEditPersoneInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Users\frmAddEditUser.resx">
       <DependentUpon>frmAddEditUser.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ApplicationInfoScreen.resx">
-      <DependentUpon>ApplicationInfoScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AppointementsVisionTest.resx">
       <DependentUpon>AppointementsVisionTest.cs</DependentUpon>
@@ -341,8 +350,8 @@
     <EmbeddedResource Include="ctrlLicenseInfo.resx">
       <DependentUpon>ctrlLicenseInfo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ctrlL_D_L_ApplicationInfo.resx">
-      <DependentUpon>ctrlL_D_L_ApplicationInfo.cs</DependentUpon>
+    <EmbeddedResource Include="Applications\LocalDrivingLicense\Controls\ctrlLocalDrivingLicenseApplicationInfo.resx">
+      <DependentUpon>ctrlLocalDrivingLicenseApplicationInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="People\Controls\ctrlPersonCard.resx">
       <DependentUpon>ctrlPersonCard.cs</DependentUpon>
@@ -374,8 +383,8 @@
     <EmbeddedResource Include="ListInternationalDrivingLicenseApplication.resx">
       <DependentUpon>ListInternationalDrivingLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ListLocalDrivingLicenseApplication.resx">
-      <DependentUpon>ListLocalDrivingLicenseApplication.cs</DependentUpon>
+    <EmbeddedResource Include="Applications\LocalDrivingLicense\frmListLocalDrivingLicenseApplication.resx">
+      <DependentUpon>frmListLocalDrivingLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
@@ -401,8 +410,8 @@
     <EmbeddedResource Include="New International License Application.resx">
       <DependentUpon>New International License Application.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Applications\LocalDrivingLicenseApplication\frmNewLocalDrivingLicenseApplication.resx">
-      <DependentUpon>frmNewLocalDrivingLicenseApplication.cs</DependentUpon>
+    <EmbeddedResource Include="Applications\LocalDrivingLicense\frmAddEditLocalDrivingLicenseApplication.resx">
+      <DependentUpon>frmAddEditLocalDrivingLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="People\frmShowPersonInfo.resx">
       <DependentUpon>frmShowPersonInfo.cs</DependentUpon>
@@ -511,5 +520,6 @@
   <ItemGroup>
     <None Include="Resources\Man 32.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
