--- a/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
+++ b/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
@@ -71,17 +71,35 @@
     <Compile Include="People\frmAddEditPersoneInfo.Designer.cs">
       <DependentUpon>frmAddEditPersoneInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Tests\Controls\ctrlReadOnlyScheduleTest.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tests\Controls\ctrlReadOnlyScheduleTest.Designer.cs">
+      <DependentUpon>ctrlReadOnlyScheduleTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tests\Controls\ctrlScheduleTest.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tests\Controls\ctrlScheduleTest.Designer.cs">
+      <DependentUpon>ctrlScheduleTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tests\frmScheduleTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tests\frmScheduleTest.Designer.cs">
+      <DependentUpon>frmScheduleTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Users\frmAddEditUser.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Users\frmAddEditUser.Designer.cs">
       <DependentUpon>frmAddEditUser.cs</DependentUpon>
     </Compile>
-    <Compile Include="AppointementsVisionTest.cs">
+    <Compile Include="Tests\frmListTestAppointments.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AppointementsVisionTest.Designer.cs">
-      <DependentUpon>AppointementsVisionTest.cs</DependentUpon>
+    <Compile Include="Tests\frmListTestAppointments.Designer.cs">
+      <DependentUpon>frmListTestAppointments.cs</DependentUpon>
     </Compile>
     <Compile Include="Users\frmChangePassword.cs">
       <SubType>Form</SubType>
@@ -269,35 +287,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScheduleStreetTest.cs">
+    <Compile Include="Tests\frmTakeTest.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ScheduleStreetTest.Designer.cs">
-      <DependentUpon>ScheduleStreetTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ScheduleVisionTest.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ScheduleVisionTest.Designer.cs">
-      <DependentUpon>ScheduleVisionTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ScheduleWrittenTest.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ScheduleWrittenTest.Designer.cs">
-      <DependentUpon>ScheduleWrittenTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="StreetTestAppointment.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="StreetTestAppointment.Designer.cs">
-      <DependentUpon>StreetTestAppointment.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TakeTest.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TakeTest.Designer.cs">
-      <DependentUpon>TakeTest.cs</DependentUpon>
+    <Compile Include="Tests\frmTakeTest.Designer.cs">
+      <DependentUpon>frmTakeTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Applications\ApplicationTypes\frmEditApplicationTypes.cs">
       <SubType>Form</SubType>
@@ -317,12 +311,6 @@
     <Compile Include="Users\frmUserInfo.Designer.cs">
       <DependentUpon>frmUserInfo.cs</DependentUpon>
     </Compile>
-    <Compile Include="Written test appointment.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Written test appointment.Designer.cs">
-      <DependentUpon>Written test appointment.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="Applications\Controls\ctrlApplicationBasicInfo.resx">
       <DependentUpon>ctrlApplicationBasicInfo.cs</DependentUpon>
     </EmbeddedResource>
@@ -332,11 +320,20 @@
     <EmbeddedResource Include="People\frmAddEditPersoneInfo.resx">
       <DependentUpon>frmAddEditPersoneInfo.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Tests\Controls\ctrlReadOnlyScheduleTest.resx">
+      <DependentUpon>ctrlReadOnlyScheduleTest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tests\Controls\ctrlScheduleTest.resx">
+      <DependentUpon>ctrlScheduleTest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tests\frmScheduleTest.resx">
+      <DependentUpon>frmScheduleTest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Users\frmAddEditUser.resx">
       <DependentUpon>frmAddEditUser.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AppointementsVisionTest.resx">
-      <DependentUpon>AppointementsVisionTest.cs</DependentUpon>
+    <EmbeddedResource Include="Tests\frmListTestAppointments.resx">
+      <DependentUpon>frmListTestAppointments.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Users\frmChangePassword.resx">
       <DependentUpon>frmChangePassword.cs</DependentUpon>
@@ -430,23 +427,11 @@
     <EmbeddedResource Include="ReplacementForDamageOrLostLicense.resx">
       <DependentUpon>ReplacementForDamageOrLostLicense.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ScheduleStreetTest.resx">
-      <DependentUpon>ScheduleStreetTest.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ScheduleVisionTest.resx">
-      <DependentUpon>ScheduleVisionTest.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ScheduleWrittenTest.resx">
-      <DependentUpon>ScheduleWrittenTest.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="ShowLicenseInfo.resx">
       <DependentUpon>ShowLicenseInfo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="StreetTestAppointment.resx">
-      <DependentUpon>StreetTestAppointment.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="TakeTest.resx">
-      <DependentUpon>TakeTest.cs</DependentUpon>
+    <EmbeddedResource Include="Tests\frmTakeTest.resx">
+      <DependentUpon>frmTakeTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Applications\ApplicationTypes\frmEditApplicationTypes.resx">
       <DependentUpon>frmEditApplicationTypes.cs</DependentUpon>
@@ -456,9 +441,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Users\frmUserInfo.resx">
       <DependentUpon>frmUserInfo.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Written test appointment.resx">
-      <DependentUpon>Written test appointment.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -520,6 +502,14 @@
   <ItemGroup>
     <None Include="Resources\Man 32.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\Vision 512.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Written Test 512.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Street Test 32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
